# AOC-2020

./: .clang-format  CMakeLists.txt  README.md
solutions/: CMakeLists.txt
solutions/day01/part1/: CMakeLists.txt  main.cpp
solutions/day01/part2/: CMakeLists.txt  main.cpp
solutions/day02/: CMakeLists.txt  Export.hpp  PasswordEntry.ipp  Utilities.ipp
solutions/day02/part1/: CMakeLists.txt  main.cpp
solutions/day02/part2/: CMakeLists.txt  main.cpp
solutions/day03/: CMakeLists.txt  Utilities.ipp
solutions/day03/part1/: CMakeLists.txt  main.cpp
solutions/day03/part2/: CMakeLists.txt  main.cpp
solutions/day04/: Utilities.ipp
solutions/day04/part1/: CMakeLists.txt  main.cpp
solutions/day04/part2/: CMakeLists.txt  main.cpp
solutions/day05/: Utilities.ipp
solutions/day05/part1/: CMakeLists.txt  main.cpp
solutions/day05/part2/: CMakeLists.txt  main.cpp
solutions/day06/: Utilities.ipp
solutions/day06/part1/: CMakeLists.txt  main.cpp
solutions/day06/part2/: CMakeLists.txt  main.cpp
solutions/day07/: Utilities.ipp
solutions/day07/part1/: CMakeLists.txt  main.cpp
solutions/day07/part2/: CMakeLists.txt  main.cpp
solutions/day08/: Utilities.ipp
solutions/day08/part1/: CMakeLists.txt  main.cpp
solutions/day08/part2/: CMakeLists.txt  main.cpp
solutions/day09/: Utilities.ipp
solutions/day09/part1/: CMakeLists.txt  main.cpp
solutions/day09/part2/: CMakeLists.txt  main.cpp
solutions/day10/: Utilities.ipp
solutions/day10/part1/: CMakeLists.txt  main.cpp
solutions/day10/part2/: CMakeLists.txt  main.cpp
solutions/day11/: Utilities.ipp
solutions/day11/part1/: CMakeLists.txt  main.cpp
solutions/day11/part2/: CMakeLists.txt  main.cpp
solutions/day12/: Utilities.ipp
solutions/day12/part1/: CMakeLists.txt  main.cpp
solutions/day12/part2/: CMakeLists.txt  main.cpp
solutions/day13/: Utilities.ipp
solutions/day14/: Utilities.ipp
solutions/day15/: Utilities.ipp
solutions/day16/: Utilities.ipp
src/: Utilities.cpp  (+2 more)
(+25 files in other folders)
